--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
-    />
+    /> -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,7 +28,7 @@
       href="assets/icons/favicon-16x16.png"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>ADAComics</title>
   </head>
   <body id="body" class="principal">
@@ -208,7 +208,7 @@
     ********************************************* -->
         <div class="loader-container">
           <img
-            src="./assets/icons/Hammer.png"
+            src="../assets/icons/Hammer.png"
             class="ld ld-flip-h thor"
             alt=""
           />
@@ -380,6 +380,8 @@
       crossorigin="anonymous"
     ></script>
     <!-- custom-js -->
-    <script src="./main.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../api/comics.js"></script>
+    <script src="../api/characters.js"></script>
   </body>
 </html>
