--- a/views/details.html
+++ b/views/details.html
@@ -44,8 +44,10 @@
       crossorigin="anonymous"
     ></script> 
         
- <script src="./main.js"></script>
+ <script src="./details.js"></script>
     <script src="../api/comics.js"></script>
     <script src="../api/characters.js"></script>
+    <script src="../process/main.js"></script>
+    
   </body>
 </html>   
