--- a/scss/layout/_banner-header.scss
+++ b/scss/layout/_banner-header.scss
@@ -58,10 +58,10 @@
         flex-wrap: wrap-reverse;
         font-size: 100px;
         .ada {
-          // border: 5px solid #ed1d23;
-          // background-color: #ed1d23;
-          border: 5px solid black;
-          background-color: black;
+          border: 5px solid $marvel-red;
+          background-color: $marvel-red;
+          // border: 5px solid black;
+          // background-color: black;
         }
         .comics {
           border-top: 5px solid white;
