--- a/scss/layout/_logo.scss
+++ b/scss/layout/_logo.scss
@@ -1,11 +1,5 @@
 body {
   margin: 0;
-  background-color: #e12835;
-  background-image: radial-gradient(
-    #e12835 20%,
-    #be2633 50%,
-    rgba(0, 0, 0, 0.5) 100%
-  );
   background-size: 120%;
   background-position: center;
   font-family: "Barlow Condensed", sans-serif;
@@ -26,116 +20,116 @@ body {
   background-repeat: none;
   background-image: url("https://static.comicvine.com/uploads/original/11124/111240517/4986890-4700382785-29908.jpg");
 }
-.wrapper {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.logo {
-  cursor: pointer;
-  text-align: center;
-  &:hover {
-    .restart {
-      opacity: 0.8;
-    }
-  }
-}
-.restart {
-  color: #fff;
-  margin-top: 20px;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-  letter-spacing: -0.08rem;
-  transition: opacity 150ms linear;
-}
-.name {
-  position: relative;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -0.2rem;
-  font-size: 5rem;
-  margin: 0.05rem 0.05rem 0.5rem;
-  padding: 0 0.4rem;
-  display: inline-block;
-  z-index: 10;
-  font-weight: 800;
-  transform: translateX(95px);
-  &:before {
-    z-index: -10;
-    content: "";
-    display: block;
-    background-color: #e12835;
-    border: solid rgba(255, 255, 255, 0.2) 1px;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-}
-.surname {
-  position: relative;
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: -0.2rem;
-  font-size: 5rem;
-  margin: 0.05rem 0.05rem 0.5rem;
-  padding: 0 0.4rem;
-  display: inline-block;
-  font-weight: 500;
-  letter-spacing: -0.3rem;
-  transform: translateX(-95px);
-  &:after {
-    content: "";
-    display: block;
-    height: 3px;
-    position: absolute;
-    background-color: #fff;
-    display: block;
-    left: 0.4rem;
-    right: 0.4rem;
-    bottom: 0;
-  }
-  &:before {
-    content: "";
-    display: block;
-    height: 3px;
-    position: absolute;
-    background-color: #fff;
-    display: block;
-    left: 0.4rem;
-    right: 0.4rem;
-    top: 0;
-  }
-}
-.wrapper.run-animation {
-  animation: shrink ease-out 4800ms forwards 600ms;
-  .name {
-    transform: translateX(95px);
-    animation: slide-out-X 750ms ease forwards;
-  }
-  .surname {
-    transform: translateX(-95px);
-    color: transparent;
-    animation: slide-out-X 750ms ease forwards,
-      show-text 300ms linear forwards 1500ms;
-    &:before {
-      transform: translateY(2.9rem);
-      animation: slide-out-Y 300ms ease forwards 750ms;
-    }
-    &:after {
-      transform: translateY(-2.9rem);
-      animation: slide-out-Y 300ms ease forwards 750ms;
-    }
-  }
-  .restart {
-    opacity: 0;
-    animation: fade-down 1200ms ease 3600ms forwards;
-  }
-  ~ {
-    .images {
-      animation: flicker-images 1500ms 2 steps(1, end), fade-out 4500ms forwards;
-    }
-  }
-}
+// .wrapper {
+//   height: 100vh;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+// .logo {
+//   cursor: pointer;
+//   text-align: center;
+//   &:hover {
+//     .restart {
+//       opacity: 0.8;
+//     }
+//   }
+// }
+// .restart {
+//   color: #fff;
+//   margin-top: 20px;
+//   font-size: 1.5rem;
+//   text-transform: uppercase;
+//   letter-spacing: -0.08rem;
+//   transition: opacity 150ms linear;
+// }
+// .name {
+//   position: relative;
+//   color: #fff;
+//   text-transform: uppercase;
+//   letter-spacing: -0.2rem;
+//   font-size: 5rem;
+//   margin: 0.05rem 0.05rem 0.5rem;
+//   padding: 0 0.4rem;
+//   display: inline-block;
+//   z-index: 10;
+//   font-weight: 800;
+//   transform: translateX(95px);
+//   &:before {
+//     z-index: -10;
+//     content: "";
+//     display: block;
+//     background-color: #e12835;
+//     border: solid rgba(255, 255, 255, 0.2) 1px;
+//     height: 100%;
+//     width: 100%;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//   }
+// }
+// .surname {
+//   position: relative;
+//   color: #fff;
+//   text-transform: uppercase;
+//   letter-spacing: -0.2rem;
+//   font-size: 5rem;
+//   margin: 0.05rem 0.05rem 0.5rem;
+//   padding: 0 0.4rem;
+//   display: inline-block;
+//   font-weight: 500;
+//   letter-spacing: -0.3rem;
+//   transform: translateX(-95px);
+//   &:after {
+//     content: "";
+//     display: block;
+//     height: 3px;
+//     position: absolute;
+//     background-color: #fff;
+//     display: block;
+//     left: 0.4rem;
+//     right: 0.4rem;
+//     bottom: 0;
+//   }
+//   &:before {
+//     content: "";
+//     display: block;
+//     height: 3px;
+//     position: absolute;
+//     background-color: #fff;
+//     display: block;
+//     left: 0.4rem;
+//     right: 0.4rem;
+//     top: 0;
+//   }
+// }
+// .wrapper.run-animation {
+//   animation: shrink ease-out 4800ms forwards 600ms;
+//   .name {
+//     transform: translateX(95px);
+//     animation: slide-out-X 750ms ease forwards;
+//   }
+//   .surname {
+//     transform: translateX(-95px);
+//     color: transparent;
+//     animation: slide-out-X 750ms ease forwards,
+//       show-text 300ms linear forwards 1500ms;
+//     &:before {
+//       transform: translateY(2.9rem);
+//       animation: slide-out-Y 300ms ease forwards 750ms;
+//     }
+//     &:after {
+//       transform: translateY(-2.9rem);
+//       animation: slide-out-Y 300ms ease forwards 750ms;
+//     }
+//   }
+//   .restart {
+//     opacity: 0;
+//     animation: fade-down 1200ms ease 3600ms forwards;
+//   }
+//   ~ {
+//     .images {
+//       animation: flicker-images 1500ms 2 steps(1, end), fade-out 4500ms forwards;
+//     }
+//   }
+// }
