--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@
 }
 
 .principal {
+  background-color: $primary-color;
   color: #151515;
   .main {
     flex-grow: 1;
@@ -28,21 +29,21 @@
 
 input {
   &:focus {
-    outline-color: #ed1d23;
+    outline-color: $marvel-red;
   }
 }
 select {
   &:focus {
-    outline-color: #ed1d23;
+    outline-color: $marvel-red;
   }
 }
 button {
   &:focus {
-    outline-color: #ed1d23;
+    outline-color: $marvel-red;
   }
   &:not(:disabled) {
     &:hover {
-      background-color: #ed1d23;
+      background-color: $marvel-red;
     }
   }
 }
