creando repo remoto

--- a/views/index.html
+++ b/views/index.html
@@ -188,13 +188,13 @@
         <!-- ******************************************
                      LOADER
     ********************************************* -->
-        <!-- <div class="loader-container">
+        <div class="loader-container">
           <img
             src="../assets/icons/Hammer.png"
             class="ld ld-flip-h thor"
             alt=""
           />
-        </div> -->
+        </div>
         <!-- ******************************************
                   PAGINADOR
     ********************************************* -->
